--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="de">
+
 <head>
-</head>
+  <base href="/">
+  <meta charset="utf-8">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>This is Kevin's Page!</title>
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+<link rel="stylesheet" href="styles.css"></head>
+
 <body>
-hello it works
-</body>
+  <app-root></app-root>
+<script src="runtime.js" type="module"></script><script src="polyfills.js" type="module"></script><script src="scripts.js" defer></script><script src="vendor.js" type="module"></script><script src="main.js" type="module"></script></body>
+
 </html>
