--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-F4P3OIQ6.js" type="module"></script><script src="main-NNRF2IAS.js" type="module"></script></body>
+<script src="polyfills-F4P3OIQ6.js" type="module"></script><script src="main-6XGO34K3.js" type="module"></script></body>
 
 </html>
