--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-F4P3OIQ6.js" type="module"></script><script src="main-CX7Y4DNT.js" type="module"></script></body>
+<script src="polyfills-F4P3OIQ6.js" type="module"></script><script src="main-QDCOKLWM.js" type="module"></script></body>
 
 </html>
