--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-F4P3OIQ6.js" type="module"></script><script src="main-LALJ4AAN.js" type="module"></script></body>
+<script src="polyfills-F4P3OIQ6.js" type="module"></script><script src="main-NKC3NI4B.js" type="module"></script></body>
 
 </html>
