--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preload" href="assets/fonts/SCRIPTIN.woff2" as="font" type="font/woff2">
   <title>Kevin Egner aus Regensburg</title>
   <meta name="description" content="Website von Kevin Egner aus Regensburg">
   <meta name="keywords" content="Kevin, Egner, Regensburg, Softwareentwicklung, Website, Webdesign, Angular">
@@ -16,6 +17,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-F4P3OIQ6.js" type="module"></script><script src="main-FU7CLGIB.js" type="module"></script></body>
+<script src="polyfills-F4P3OIQ6.js" type="module"></script><script src="main-DHAPP7PY.js" type="module"></script></body>
 
 </html>
